updated signup form, fixed teachers page, fixed schema and removed some migrations

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -63,7 +63,7 @@
 														
 							<% else %>
 												<figure class="mono" style="opacity: 0.5;">
-													<img src="<%= user.image %>"/>
+													<img src="<%= user.picture %>"/>
 												<div class="cover-text text-center">
 													<p style="color: #fff;"></p>
 												</div>
@@ -125,7 +125,7 @@
 		<% end %>
 		
 <% else %>
-<p>Your application is currently under review, please wait a little longer</p>
+<p style="text-align: center">Your application is currently under review, please wait. Thank you</p>
 <% end %>
 
 <% else %>
