--- a/app/views/users/new2.html.erb
+++ b/app/views/users/new2.html.erb
@@ -150,12 +150,16 @@ span.input-group-addon i {
               </div>
 
             <div class="form-group">
-              <label for="user_skill" class="hidden-xs">Skills</label>
+              <label for="user_skill" class="hidden-xs">Skills Level / Years of Teaching</label>
                 <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-gear" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.text_field :skill, class: 'form-control', :placeholder => 'Skill' %>
-                </div>
+                  <select class="form-control" name="user[skill]" required>
+                    <option value="Less than 1 year">Less than 1 year</option>
+                    <option value="1 - 3 years">1 - 3 years</option>
+                    <option value="3 - 5 years">3 - 5 years</option>
+                    <option value="5 - 10 years">5 - 10 years</option>
+                  </select>
               </div>
+            </div>
 
             <div class="form-group">
               <label for="user_job" class="hidden-xs">Profession <small style="color: red">[required]</small></label>
@@ -166,28 +170,31 @@ span.input-group-addon i {
               </div>
 
             <div class="form-group">
-              <label for="user_appeal" class="hidden-xs">Describe Yourself Briefly <small style="color: red">[required]</small></label>
-                <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-quote-left" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.text_field :appeal, class: 'form-control', :placeholder => 'Descrption', :required => ''  %>
+                <label for="name" class="control-label hidden-xs">Describe Yourself Briefly <small style="color: red">[required]</small></label>
+                  <div class="input-group">
+                    <%= f.text_area(:appeal, rows: 5, class: "form-control", placeholder: "Description", :required => '') %>
                 </div>
-              </div>
+           </div>
 
             <div class="form-group">
-              <label for="user_hobby" class="hidden-xs">Hobby</label>
+              <label for="user_hobby" class="hidden-xs">Hobbies</label>
                 <div class="input-group">
                   <span class="input-group-addon hidden-xs"><i class="fa fa-soccer-ball-o" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.text_field :hobby, class: 'form-control', :placeholder => 'Hobby' %>
+                  <%= f.text_field :hobby, class: 'form-control', :placeholder => 'Hobbies' %>
                 </div>
               </div>
 
             <div class="form-group">
-              <label for="user_country" class="hidden-xs">Country</label>
+              <label for="user_skill" class="hidden-xs">Skills Level / Years of Teaching</label>
                 <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-flag" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.text_field :country, class: 'form-control', :placeholder => 'Country' %>
-                </div>
+                  <select class="form-control" name="user[country]" required>
+                    <option value="Filipino">Philippines</option>
+                    <option value="Japanese">Japan</option>
+                    <option value="American">USA</option>
+                    <option value="Others">Others</option>
+                  </select>
               </div>
+            </div>
 
             <div class="form-group">
               <label for="user_movie" class="hidden-xs">Favorite Movie</label>
