--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -7,13 +7,13 @@
     
     <div style="padding:0 0 30px 0px; width:200px; float:left; margin:0 0px 0 0px;">
     <div style="padding:0 0 10px 0px; font-size:25px;">Teacher. <%= @user.name %></div>
-    <div style="padding:0 0 10px 0px; font-size:25px;"><img src="<%= @user.image %>" alt="img25" width="150"/></div>
+    <div style="padding:0 0 10px 0px; font-size:25px;"><img src="<%= @user.picture %>" alt="img25" width="150"/></div>
     <br>
     </div>
     
     
     <div class="box1" style="padding:0 0 30px 30px; width:200px; float:left; margin:0 10px 0 10px;">
-    <h4>Savings</h4>
+    <h4>Time Earned</h4>
     <span style="font-size:45px;">
 
     <% if @user.time.nil? %>
@@ -29,25 +29,17 @@
       <%= render 'shared/error_message', object: f.object %>
      <h4>Status</h4>
      <div class="radio" style="margin-bottom: 10px;">
-     <label><%= f.radio_button :busy, "busy" %>busy</label>
-     <label><%= f.radio_button :busy, "No" %>no</label>
+     <label><%= f.radio_button :busy, "available" %>Available</label>
+     <label><%= f.radio_button :busy, "not available" %>Not Available</label>
+     <label><%= f.radio_button :busy, "on call" %>On A Call</label>
+
      </div>
       <%= f.submit "submit", class: "btn btn-primary", name: "busy" %>
     <% end %>
     </div>
-
-    <div class="box1" style="padding:0 0 70px 30px; width:200px; float:left; margin:0 10px 0 10px;">
-    <h4>Refresh</h4>
-      <script>
-      function koshin(){
-        location.reload();
-      }
-      </script>
-      <input type="button"  value="submit" onclick="koshin()">
-    </div>
     
     <div class="box1" style="padding:0 0 50px 30px; width:200px; float:left; margin:0 10px 0 10px;">
-    <h4>Total</h4>
+    <h4>Total / Summary</h4>
     <div style="padding:0 0 0px 0px; font-size:15px;">　<%= @totalsafes.count %> lessons<br>
     　<%= @totalsafes.sum(:time) %> mins</div>
     </div>
