--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,6 @@
               text-align: center;
        } 
     }
-
 </style>
 
   <div class="container">
@@ -25,24 +24,25 @@
           </div>
         </div>
 
+
       <div class="col-md-12 hidden-xs hidden-sm" style="margin-top: 20px;">
         <div class="col-md-4">
           <div class="thumbnail" style="box-shadow: 5px 10px #ccc;">
-            <a href="#">
-              <img src="<%= @user.image %>" style="width:100%">
+            <a href="<%= @user.image %>">
+              <img src="<%= @user.image %>" data-toggle="lightbox alt = "shae">
             </a>
           </div>
         </div>
         <div class="col-md-4 ">
           <div class="thumbnail" style="box-shadow: 5px 10px #ccc;">
-            <a href="#">
+            <a href="#" data-lightbox="gallery">
               <img src="<%= @user.image %>" style="width:100%">
             </a>
           </div>
         </div>
         <div class="col-md-4">
           <div class="thumbnail" style="box-shadow: 5px 10px #ccc;">
-            <a href="#">
+            <a href="#" data-lightbox="gallery">
               <img src="<%= @user.image %>" style="width:100%">
             </a>
           </div>
@@ -60,18 +60,18 @@
 
       <div class="row">
           <div class="col-md-6">
-            <i class="fa fa-flag"></i> Nationality：<%= @user.country %><br/><br/>
+            <i class="fa fa-flag"></i> Country： <%= @user.country %><br/><br/>
           </div>
           <div class="col-md-6">
-            <i class="fa fa-line-chart"> </i> Skill Level：<%= @user.skill %><br/><br/>
+            <i class="fa fa-line-chart"> </i> Skill Level： <%= @user.skill %><br/><br/>
           </div>
       </div>
       <div class="row">
           <div class="col-md-6">
-            <i class="fa fa-soccer-ball-o"> </i> Hobbies：<%= @user.hobby %><br/><br/>
+            <i class="fa fa-soccer-ball-o"> </i> Hobbies： <%= @user.hobby %><br/><br/>
           </div>
           <div class="col-md-6">
-          <i class="fa fa-university"> </i>Profession：<%= @user.job %><br/>
+          <i class="fa fa-university"> </i>Profession： <%= @user.job %><br/>
           </div>
       </div>
       </p>
