--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -98,14 +98,30 @@ a {
         <% if current_user.type_user == "teacher" %>
 
         <div class="col-md-offset-1 col-md-2 col-xs-12" style="margin-top: 40px;">
-  		 <%=  link_to edit2_user_path(current_user.id) do %>
-            <span class="fa fa-rocket"></span> Dashboard
-        </div>
 
-          <% end %>
+			 	<% if current_user.time >= 30 %>
+                    <% @hours = current_user.time / 60 
+                    @mins = (current_user.time) % 60
+                    %>
+
+
+                   	<%=  link_to history_student_path(current_user.id), style: "border: 1px solid #ccc; border-radius: 10px; padding: 15px;" do %>
+                    <i class="fa fa-hourglass" aria-hidden="true"></i> <%= format('%02d', @hours) %> : <%= format('%02d', @mins) %> <span class="hidden-xs" style="font-size:10px;"> Time Earned</span>
+                    <% end %>
+
+	                <% else %>
+
+                   	<%=  link_to history_student_path(current_user.id), style: "border: 1px solid #ccc; border-radius: 10px; padding: 15px;" do %>
+                    <i class="fa fa-hourglass" aria-hidden="true"></i> 00:00 <span class="hidden-xs" style="font-size:10px;"> Time Earned</span>
+                 <% end %>
+
+                    <% end %>          
+                </div>
         <% end %>
 
         <% end %>
+
+        <% if current_user.type_user == "student" %>
 
 		<div class="col-md-5 col-xs-12 mobilemenu" style="margin-top: 40px;">
 			<div class="col-md-3 col-xs-3 mobilecenter">
@@ -127,6 +143,61 @@ a {
 			<% end %>
 			</div>
 		</div>
+
+		<% elsif current_user.type_user  == "teacher" %>
+
+		<div class="col-md-5 col-xs-12 mobilemenu" style="margin-top: 40px;">
+			<div class="col-md-3 col-xs-3 mobilecenter">
+			 <%=  link_to edit2_user_path(current_user.id) do %>
+			 <img src="../../book.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;Dashboard</span>
+          	<% end %>
+			</div>
+
+			<div class="col-md-3 col-xs-3 mobilecenter">
+			<%=  link_to edit3_user_path(current_user.id) do %><img src="../../clock.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;時間チャージ</span>
+			<% end %>
+			</div>
+
+			<div class="col-md-3 col-xs-3 mobilecenter">
+			<%=  link_to edit_user_path(current_user.id) do %> <img src="../../user.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;プロフィール</span>
+			<% end %>
+			</div>
+
+			<div class="col-md-3 col-xs-3 mobilecenter">
+			<%=  link_to "/logout", method: :delete do %><img src="../../logout.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;ログアウト</span>
+			<% end %>
+			</div>
+		</div>
+
+
+		<% else %>
+
+		<div class="col-md-5 col-xs-12 mobilemenu" style="margin-top: 40px;">
+			<div class="col-md-3 col-xs-3 mobilecenter">
+			 <%=  link_to edit2_user_path(current_user.id) do %>
+			 <img src="../../book.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;先生を探す</span>
+          	<% end %>
+			</div>
+
+			<div class="col-md-3 col-xs-3 mobilecenter">
+			<%=  link_to edit3_user_path(current_user.id) do %><img src="../../clock.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;時間チャージ</span>
+			<% end %>
+			</div>
+
+			<div class="col-md-3 col-xs-3 mobilecenter">
+			<%=  link_to edit_user_path(current_user.id) do %> <img src="../../user.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;プロフィール</span>
+			<% end %>
+			</div>
+
+			<div class="col-md-3 col-xs-3 mobilecenter">
+			<%=  link_to "/logout", method: :delete do %><img src="../../logout.png" style="width: 20px;"><span class="hidden-xs" style="font-size:10px;">&nbsp;&nbsp;ログアウト</span>
+			<% end %>
+			</div>
+		</div>
+
+		<% end %>
+
+
 </div>
 </div>
 
