--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -5,9 +5,9 @@
 <div class="row">
   <div class="col-md-3">
        <div class="thumbnail">
-          <img src="<%= @user.image %>" alt="...">
+          <img src="<%= @user.picture %>" alt="...">
           <div class="caption">
-            <h3>Teacher. <%= @user.name %></h3>
+            <h3 class="text-center">Teacher <%= @user.nick %></h3>
           </div>
        </div>
   </div>
@@ -136,13 +136,14 @@
 <div class="container">
  <div class="row">
   <div class="col-md-12">
-    <table class="table table-bordered">
+    <table class="table table-bordered table-hover text-center">
       <thead class="thead-default">
       <tr>
-      <th>ID</th>    
-      <th>Student Name</th>
-      <th>Time Remaining</th>      
-      <th>編集</th>
+      <th class="info text-center">ID</th>
+      <th class="info text-center">Date / Time</th>
+      <th class="info text-center">Student Name</th>
+      <th class="info text-center">Time Remaining</th>      
+      <th class="info text-center">Status</th>
       </tr>
       </thead>
       <tbody>
@@ -150,8 +151,8 @@
   <% @safes.each do |safe| %>
 
           <td><%= safe.id %></td>
+          <td><%= safe.created_at %></td>
           <td><%= safe.student %></td>
-          
           <% @p = "\"" + safe.student + "\"" %>
           <% @id = User.find_by(name: safe.student) %>
           <td>
@@ -164,11 +165,11 @@
           </td>
           
           
-          <td><center>
+          <td>
           <%= link_to edit_safe_path(safe), :class => "btn btn-primary" do %>
           <span style="color:#fff;"><i class="fa fa-pencil-square-o"></i><div class="hidden-xs">Application for Complete</div></span>
           <% end %>
-          </center></td>
+          </td>
           
    
         </tr>
