--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
       <div class="col-md-12 hidden-xs hidden-sm" style="margin-top: 20px;">
         <div class="col-md-4">
           <div class="thumbnail" style="box-shadow: 5px 10px #ccc;">
-            <a href="<%= @user.image %>">
+            <a href="#">
               <img src="<%= @user.image %>" data-toggle="lightbox alt = "shae">
             </a>
           </div>
