--- a/app/views/safes/edit.html.erb
+++ b/app/views/safes/edit.html.erb
@@ -1,8 +1,83 @@
 
 
-<div class="container-fluid">
+<br/><br/>
+
+<div class="container">
+	<div class="row">
+	<div class="col-md-12">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h3 class="hidden-xs">APPLICATION FOR COMPLETE<span class="pull-right glyphicon glyphicon-pencil"></span></div></h3>
+      <div class="panel-body">
+      	<div class="row">
+      	<div class="col-sm-12">
+      	<label>Student Name:</label> <%= @safe.student %>
+      	</div>
+      	<%= form_for(@safe) do |f| %>
+		<%= render 'shared/error_message', object: f.object %>
+      	</div>
+      	<hr/>
+      	<div class="row">
+      		<div class="col-sm-12">
+      			<% if @safe.photo.present? %>
+				Screenshot of Class <i class="fa fa-picture-o"></i>
+				<%#= @safe.photo  %>
+				<img src="<%= @safe.photo %>" style="width: 100px;" >
+				<% else %>
+				<label>Screenshot of Class</label> <i class="fa fa-picture-o"></i>
+				<%= f.file_field :photo, accept: 'image/jpeg,image/gif,image/png', class: 'form-control-file'  %>
+				<% end %>
+      		</div>
+      	</div>
+      	<hr/>
+      	<div class="row">
+      		<div class="col-sm-12">
+      			 <div class="form-group">
+				    <label for="duration">Call Duration</label>
+				    <%= f.text_field :time , class: 'form-control' , :style => 'width:100%;', :id => 'duration'%>
+				    <small id="emailHelp" class="form-text text-muted">ex. 0:13:54 → 13  ,  1:23:38 → 83</small>
+				  </div>
+      		</div>
+      	</div>
+      	<hr/>
+      	<div class="row">
+      		<div class="col-sm-12">
+      		<div class="form-group">
+                <label for="remarks">Student Remarks</label>
+                  <div class="input-group">
+                    <%= f.text_area(:remarks, rows: 5, class: "form-control", :id => 'remarks', placeholder: "...", :required => '') %>
+                </div>
+           </div>
+      		</div>
+      	</div>
+      	<hr/>
+      	<div class="row">
+      		<div class="col-md-12">
+      			<button class="btn btn-md btn-info"  name="application"> <i class='fa fa-save'></i> SUBMIT
+				<%= f.submit data: { disable_with: "Please wait...", confirm: 'Are you sure？' }, :style => 'display:none', name: "application" %>
+				</button>
+				&nbsp&nbsp&nbsp&nbsp&nbsp<a class="btn btn-md btn-danger" href="/" style="color:white;"><i class='fa fa-mail-reply'></i> BACK</a>
+      		</div>
+      </div>
+    </div>
+	</div>
+	</div>
+</div>
+<% end %>     
+
+
+
+
+
+
+
+
+
+
+	 <!-- this part  is the previous one
+	 this part  is the previous one
+	 this part  is the previous one -->
+<!-- <div class="container-fluid">
 <div class="" style="padding:0px 15% 60px 15%;">
-  
 <h1 style="margin-bottom: 0px;"><i class="fa fa-pencil-square-o" style="margin-right: 10px;"></i>Application for Complete</h1>
 <br><br>
 <div class="" style="padding:0px 10% 0px 0%;">
@@ -21,7 +96,7 @@
 <%= render 'shared/error_message', object: f.object %>
 
 
-<h4>Student Name : <%= @safe.student %></h4>
+<h4>Student Name: <%= @safe.student %></h4>
 
 <br><br>
 
@@ -68,7 +143,7 @@
 </div>
 </div>
 </div>
-</div>
+</div> -->
 
 
 
