added pk and sk

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -125,7 +125,7 @@
 		<% end %>
 		
 <% else %>
-<p style="text-align: center">Your application is currently under review, please wait. Thank you</p>
+<p style="text-align: center">Your application is currently under review, please complete your Teacher's Profile by clicking the profile menu at the top. Thank you</p>
 <% end %>
 
 <% else %>
