--- a/app/views/users/edit6.html.erb
+++ b/app/views/users/edit6.html.erb
@@ -41,7 +41,7 @@ window.name = "xsyz";
 }
 </style>
 <%= form_tag(action: :purchase3, method: :post) do %>
-<script type="text/javascript" src="https://checkout.pay.jp" class="payjp-button" data-key="pk_live" data-text="チャージする" ></script>
+<script type="text/javascript" src="https://checkout.pay.jp" class="payjp-button" data-key="<%= @pk %>" data-text="チャージする" ></script>
 <% end %>
 
 </div>
