--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -97,7 +97,15 @@
       <hr>
        <%= f.hidden_field :busy, :value => "no"%>
        
+       <%if current_user.time <= 25 %>
+
+       <p>Sorry, you don't have enough time to have class. Please <a href="/" class="btn btn-warning">Click Here</a> to purchase time</p>
+
+
+       <% else %>
+
        <%= f.submit "→　今すぐ英会話", :class => "btn btn-primary", :style => "" %>
+    <% end %>
     <% end %>
 
       </div>
