--- a/app/views/contact_form/new.html.erb
+++ b/app/views/contact_form/new.html.erb
@@ -127,7 +127,7 @@ span.input-group-addon i {
 </style>
 
 <div class="bg nopadding">
-    <div class="container nopadding">
+    <div class="container">
       <div class="row main">
         <div class="col-md-12">
         <div class="main-login main-center col-md-5">
@@ -182,9 +182,25 @@ span.input-group-addon i {
         <div class="main-login main-center col-md-6 text-center qrcode" style="margin-left: 40px;">
          <div class="form-group">
           <p>Scan the LINE QR code:</p>
-          <img src="../../qrline.png" alt="image here" height="300" width="300" style="max-width: 100%">
+          <img src="../../qrline.png" alt="image here" height="180" width="180" style="max-width: 100%">
           <p></p>
          </div>
+         <hr>
+         <p>For Students:</p>
+         <p>株式会社ENLOOP<br>
+            06-7178-0532<br>
+            〒550-0015 大阪府大阪市西区南堀江1丁目16−11<br>
+            info@enloop-inc.com</p>
+        <hr>
+        <p>For Teachers:</p>
+        <p>Web Mechanics Online Services<br>
+          Unit 203 Ellian Tower Building, C. Ouano St. Centro<br>
+          Mandaue, Cebu Philippines 6014<br>
+          Phone: +63 32 342 0263<br>
+          Mobile: 0917 772 5544<br>
+          Email: support@web-mech.net<br>
+          Website: www.web-mech.net<br></p>
+
        </div>
       </div>
     </div>
